<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TvSoustitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accueil_soustitre"

        android:background="#4D0"
        android:textSize="25sp"
        android:padding="20dp"
        android:textColor="#DFC"
        android:gravity="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:textColor="#DFC"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/accueil_info" />

    <TextView
        android:id="@+id/tvNouvelles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stub" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btCarte"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F4B725"
            android:text="@string/carte_titre" />

        <Button
            android:id="@+id/btAlerte"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="#EF2020"
            android:text="@string/alerte_titre" />
    </LinearLayout>

    <Button
        android:id="@+id/btAnnuaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F4B725"
        android:text="@string/annuaire_titre" />

</LinearLayout>
</ScrollView>
