<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intitule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intitule"
        android:labelFor="@id/intituleText"
        />

    <EditText
        android:id="@+id/intituleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/lieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lieu"
        android:labelFor="@id/lieuText"
        />

    <EditText
        android:id="@+id/lieuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <TextView
        android:id="@+id/informations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informations"
        android:labelFor="@id/informationsText"
        />

    <EditText
        android:id="@+id/informationsText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:text=""
        android:gravity="start|top"
        android:layout_weight="1"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/urgent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/envoyer"
        android:onClick="envoyerClick"
        />

    <AutoCompleteTextView
        android:id="@+id/Lieu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:text="" />

</LinearLayout>