<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_nom"
        />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textCapSentences"
        android:text="" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_age"
            />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text=""
            android:gravity="start|top"
            />

        <TextView
        android:id="@+id/tvEspece"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_espece"
        />

        <EditText
            android:id="@+id/etEspece"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapSentences"
            android:text=""
            android:gravity="start|top"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:onClick="onClick"
            />

    <Button
        android:id="@+id/buttonChercher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal_chercher"
        android:onClick="onClick"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <TextView
        android:id="@+id/tvResultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        />
    </ScrollView>
</LinearLayout>